--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,10 @@ section.timeline-card-content div.card-description > p {
   margin-bottom: 25px;
 }
 
+.section-content-container {
+  width: 90vw;
+}
+
+.about-image {
+  width: 80vw;
+}
